--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="content_section">
                 <h2>Medicare Basic</h2>
                 <p class="basic__info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
+                <button class="contact__btn"><a href="/pages/signUp.html">Contact</a></button>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <div class="content_section">
                 <h2>Long Term Basic Care</h2>
                 <p class="basic__info2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
+                <button class="contact__btn"><a href="/pages/signUp.html">Contact</a></button>
             </div>
             <img src="https://images.unsplash.com/photo-1534630103086-5b1c106f74e0?q=80&w=2062&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Couple overlooking the lake holding hands" class="content_image">
         </div>
@@ -69,7 +69,7 @@
             <div class="content_section">
                 <h2>Life Policy</h2>
                 <p class="basic__info3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nihil hic reprehenderit laboriosam accusantium autem corrupti eligendi sit quod quam dolor quaerat, praesentium tempore assumenda fugiat nesciunt? Vero, distinctio culpa!</p>
-                <button class="contact__btn"><a href="/joinOurTeam.html">Contact</a></button>
+                <button class="contact__btn"><a href="/pages/signUp.html">Contact</a></button>
             </div>
         </div>
 
