--- a/pages/meetTheTeam.html
+++ b/pages/meetTheTeam.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../styles/meetTheTeam.css">
+    <link rel="icon" href="../styles/imgs/favicon.ico" type="image/x-icon">
     <title>Meet The Team</title>
 </head>
 <body>
